# gentoo-overlay

net-libs/libnetmap/: libnetmap-9999.ebuild
net-libs/libnetmap/files/: CMakeLists.txt
net-libs/netmap-modules/: netmap-modules-9999.ebuild
